Fazendo o cadastrar.html

--- a/templates/cadastrar.html
+++ b/templates/cadastrar.html
@@ -6,6 +6,10 @@
     <title>Cadastro Bebidas</title>
 </head>
 <body>
+    <h1>
+        Cadastre sua bebida
+    </h1>
+    
     
 </body>
 </html>
