Adicionando a pagina inicio e fazendo mudanças no cadastrar

--- a/templates/cadastrar.html
+++ b/templates/cadastrar.html
@@ -8,8 +8,8 @@
         
         <form>
             <div>
-                <label for="bebida">Insira a Bebida:</label>
-                <input type="text" id="bebida" name="bebida" required>
+                <label for="Nome_bebida">Insira o nome da Bebida:</label>
+                <input type="text" id="Nome_bebida" name="Nome_bebida" required>
             </div>
             
             <div>
@@ -17,6 +17,16 @@
                 <input type="number" id="valor" name="valor" step="0.01" required>
             </div>
             
+            <div>
+                <label for="Marca">Marca da bebida:</label>
+                <input type="text" id="Marca" name="Marca" required>
+            </div>
+
+            <div>
+                <label for="Tipo_bebida">Tipo da bebida:</label>
+                <input type="text" id="Tipo_bebida" name="Tipo_bebida" required>
+            </div>
+
             <button type="submit">Cadastrar</button>
         </form>
     </body>
