--- a/templates/template.html
+++ b/templates/template.html
@@ -13,6 +13,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/cadastrar">Cadastrar</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/">Inicio</a>
+        </li>
       </ul>
       <div class="container text-center"">
         {% block catalogo %} {% endblock %}
@@ -21,5 +24,8 @@
       <div class="container-fluid">
         {% block cadastrar %} {% endblock %}
       </div>
+
+      <div class="container-fluid">
+        {% block home %} {% endblock %}
 </body>
 </html>
