Adicionando catalogo_editar para o futuro do projeto ao adicionar banco de dados, e alterando rodapé principal

--- a/templates/cadastrar.html
+++ b/templates/cadastrar.html
@@ -7,7 +7,7 @@
         <h1>Cadastre Sua Bebida</h1>
         
         <form>
-            <div>
+            <div class="mb-3">
                 <label for="Nome_bebida">Insira o nome da Bebida:</label>
                 <input type="text" id="Nome_bebida" name="Nome_bebida" required>
             </div>
