arquivo css iniciado, lincado com o arquivo catatogo_editar

--- a/templates/catalogo_editar.html
+++ b/templates/catalogo_editar.html
@@ -4,6 +4,7 @@
 {% block catalogo %}
     <head>
         <title>Catalogo Bebidas</title>
+    <a href="style.css"> <link rel="stylesheet" href="style.css"></a>
 
     </head>
     <body>
