--- a/templates/catalogo_edit.html
+++ b/templates/catalogo_edit.html
@@ -8,8 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catálogo de Bebidas</title>
-    <!-- Link para o arquivo CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="/static/styles_catalogo_edit.css">
 </head>
 <body>
     <h2>Catálogo de Bebidas</h2>
