--- a/templates/template.html
+++ b/templates/template.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <title>Adega</title>
-    <link rel="stylesheet" href="../static/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/bootstrap.min.css"
 </head>
 <body>
   
@@ -17,9 +17,8 @@
           <a class="nav-link" href="/cadastrar">Cadastrar</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/catalogoadmin">Cadastrar Admin</a>
+          <a class="nav-link" href="/catalogoadmin">Catalogo Admin</a>
         </li>
-        
       </ul>
       <div class="container text-center">
         {% block catalogo %} {% endblock %}
@@ -32,10 +31,9 @@
       <div class="container-fluid">
         {% block home %} {% endblock %}
       </div>
-
-      <div class="container text-center"">
+    
+      <div class="container-fluid">
         {% block catalogo_editar %} {% endblock %}
       </div>
-
 </body>
 </html>
