--- a/static/styles_catalogo_edit.css
+++ b/static/styles_catalogo_edit.css
@@ -1,4 +1,3 @@
-/* Estilizando o corpo da página */
 body {
     font-family: Arial, sans-serif;
     background-color: #191414;
@@ -7,63 +6,55 @@ body {
     padding: 20px;
 }
 
-/* Estilo para o título */
 h2 {
     text-align: center;
     color: rgb(37, 63, 183);
     margin-bottom: 20px;
 }
 
-/* Estilo para a tabela */
 .table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra para a tabela */
-    border-radius: 8px; /* Bordas arredondadas */
-    overflow: hidden; /* Para arredondar as bordas */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+    border-radius: 8px; 
+    overflow: hidden; 
 }
 
 .table th, .table td {
     border: 1px solid #454645;
-    padding: 12px; /* Aumentar o padding */
+    padding: 12px;
     text-align: left;
 }
 
-/* Estilo para os cabeçalhos da tabela */
+
 .table th {
     background-color: rgb(37, 63, 183);
-    color: #fff; /* Cor do texto branca para contraste */
+    color: #fff; 
     font-weight: bold;
 }
 
-/* Estilo para as linhas da tabela */
 .table tr:nth-child(even) {
-    background-color: #2a2a2a; /* Fundo mais escuro */
+    background-color: #2a2a2a; 
 }
 
 .table tr:nth-child(odd) {
-    background-color: #1f1f1f; /* Fundo alternativo */
+    background-color: #1f1f1f; 
 }
 
 .table tr:hover {
-    background-color: rgba(61, 61, 61, 0.7); /* Efeito de hover mais suave */
+    background-color: rgba(61, 61, 61, 0.7); 
 }
 
-/* Estilo para os links de edição e exclusão */
-.table a {
+/* .table a {
     color: #1d61b9;
     text-decoration: none;
-    font-weight: bold; /* Negrito para os links */
-    transition: color 0.3s; /* Efeito de transição */
-}
+    font-weight: bold; 
+    transition: color 0.3s; 
+} */
 
 .table a:hover {
     text-decoration: underline;
-    color: #ff6f61; /* Mudança de cor no hover */
-}
+    color: #ff6f61; 
 
-/* Estilo para o separador entre os links */
-.table a:nth-child(2) {
-    margin: 0 5px;
 }
