--- a/templates/catalogo_users.html
+++ b/templates/catalogo_users.html
@@ -4,6 +4,7 @@
 {% block catalogo %}
     <head>
         <title>Catalogo Bebidas</title>
+        <link rel="stylesheet" href="/static/styles_catalogo_user.css">
         
     </head>
     <body>
