Estabelecido padrão montado para o projeto e alterações nos botões da tela de cadastro e das ações do Catalogo

--- a/templates/cadastrar_edit.html
+++ b/templates/cadastrar_edit.html
@@ -33,7 +33,7 @@
                 <input type="number" id="valor" name="valor" step="0.01" placeholder="Ex: 29,99" required>
             </div>
 
-            <button type="submit">Cadastrar</button>
+            <button type="submit" class="btn btn-outline-primary">Cadastrar</button>
         </form>
     </div>
 </body>
