--- a/templates/catalogo_users.html
+++ b/templates/catalogo_users.html
@@ -30,7 +30,7 @@
                         <td>{{ bebidas.marca_produto }}</td>
                         <td>{{ bebidas.preco_produto }}</td>
                         <td>
-                            <form action="" method="" style="display:inline;">
+                            <form action="{{ url_for('editar' , id=bebidas.id)}}" method="POST" style="display:inline;">
                                 <button type="submit" class="btn btn-outline-warning">Editar</button>
                             </form>
                             <a>|</a>
