Adicionando login ao projeto e verificações para ver se realmente existe o usuario

--- a/templates/template.html
+++ b/templates/template.html
@@ -8,7 +8,7 @@
   
     <ul class="nav nav-pills justify-content-center">
         <li class="nav-item">
-          <a class="nav-link" href="/">Inicio</a>
+          <a class="nav-link" href="/home">Inicio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/catalogo">Catalogo</a>
