--- a/static/styles_catalogo_user.css
+++ b/static/styles_catalogo_user.css
@@ -1,13 +1,13 @@
 body {
     font-family: Arial, sans-serif;
-    background-image: url('/static/fundo_catalogo.png');
+    background-image: url('/static/fundo_catalogo.png'); 
     background-size: cover; 
-    background-position: center; 
-    background-repeat: no-repeat;
+    background-position: 60% 30%; 
+    background-repeat: no-repeat; 
+    background-attachment: fixed; 
     color: #333;
-    margin: 0;
-    padding: 0;
 }
+
 
 
 
