--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,3 @@
-{% extends "template.html" %}
 
 {% block home %}
     <title>Inicio</title>
@@ -6,50 +5,45 @@
 </head>
 <body>
     <header>
-        <h1>Adega Comércio</h1>
+        <h1>Adega do Ponto</h1>
         <nav>
             <ul>
                 <li><a href="#shows">Dias de Show</a></li>
-                <li><a href="#sobre">Sobre Nós</a></li>
+                <li><a href="#endereco">Endereço</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
     </header>
-    
+
+    <div class="catalogo-button">
+        <a href="/catalogo" class="botao-catalogo">Ver Catálogo de Bebidas</a>
+    </div>
+
     <main>
         <section id="shows">
             <h2>Shows</h2>
-            <div class="produtos-grid">
-                <div class="produto">
-                    <img src="/static/produto1.jpg" alt="Produto 1">
+            <div class="shows_grid">
+                <div class="doce_encontro">
                     <h3>Doce Encontro</h3>
                     <span>Entrada R$ 50,00</span>
                 </div>
-                <div class="produto">
-                    <img src="/static/produto2.jpg" alt="Produto 2">
-                    <h3>Vinho Branco</h3>
-                    <p>Descrição do vinho branco.</p>
-                    <span>R$ 39,90</span>
+               
+                <div class="exalta_samba">
+                    <h3>Exalta Samba</h3>
+                    <span>R$ 70,00 </span>
                 </div>
-                <div class="produto">
-                    <img src="/static/produto3.jpg" alt="Produto 3">
-                    <h3>Espumante</h3>
-                    <p>Descrição do espumante.</p>
-                    <span>R$ 59,90</span>
-                </div>
-                <!-- Adicione mais produtos conforme necessário -->
             </div>
         </section>
         
-        <section id="sobre">
-            <h2>Sobre Nós</h2>
-            <p>Informações sobre a adega, sua história, e o que a torna especial.</p>
+        <section id="endereco">
+            <h2>Endereço</h2>
+            <p>Avenida aprigio 455, Taboão da serra</p>
         </section>
     </main>
     
     <footer>
-        <p>Contato: contato@adegacomercio.com</p>
-        <p>&copy; 2024 Adega Comércio. Todos os direitos reservados.</p>
+        <p>Contato: contato@adegadoponto.com.br</p>
+        <p>&copy; 2024 Adega Do Ponto. Todos os direitos reservados.</p>
     </footer>
 </body>
 {% endblock %}
