Ajustado projeto para entrega

--- a/templates/cadastrar_edit.html
+++ b/templates/cadastrar_edit.html
@@ -25,7 +25,7 @@
 
             <div class="mb-3"> 
                 <label for="Marca">Marca da bebida:</label>
-                <input type="text" id="Marca" name="marca" placeholder="Ex: Etermity" required>
+                <input type="text" id="Marca" name="marca" placeholder="Ex: Eternity" required>
             </div>
 
             <div class="mb-3">
